<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">牛逼</string>
    <string name="btn1_name">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_tab_home">首页</string>
    <string name="bottom_tab_query">音乐</string>
    <string name="bottom_tab_down">下载</string>
    <string name="bottom_tab_msg">消息</string>
    <string name="bottom_tab_per">我</string>
    <string name="loading">玩命加载中&#8230;</string>
    <string name="mplay">播放</string>    
    <string name="mpause">暂停</string>
    <string name="back">退出</string>
</resources>
