<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom_tab"
        android:orientation="vertical" >
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/tab0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/tab_normal">

            <ImageView
                android:id="@+id/tab0_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab0_focus"
                android:layout_weight="1"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/tab0_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bottom_tab_home"
                android:textColor="@color/bottomtab_normal"
                android:textSize="12sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/tab_normal">

            <ImageView
                android:id="@+id/tab1_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab1_normal"
                android:layout_weight="1"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/tab1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bottom_tab_query"
                android:textColor="@color/bottomtab_normal"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/tab_normal">

            <ImageView
                android:id="@+id/tab2_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab2_normal"
                android:layout_weight="1"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/tab2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bottom_tab_down"
                android:textColor="@color/bottomtab_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/tab_normal">

            <ImageView
                android:id="@+id/tab3_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab3_normal"
                android:layout_weight="1"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/tab3_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bottom_tab_msg"
                android:textColor="@color/bottomtab_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/tab_normal">

            <ImageView
                android:id="@+id/tab4_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab4_normal"
                android:layout_weight="1"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/tab4_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bottom_tab_per"
                android:textColor="@color/bottomtab_normal"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
